# fund_research_v2

./: .gitignore  AGENTS.md  Makefile  README.md  changes.md  error_log.md  pyproject.toml
configs/: default.json  tushare.json  tushare_scoring_v2.json  tushare_scoring_v2_lite.json  tushare_scoring_v3.json
configs/archive/factor_research/: tushare_incremental_add_drawdown_duration.json  tushare_incremental_add_drawdown_duration_portfolio12.json  tushare_incremental_add_drawdown_duration_portfolio8.json  tushare_incremental_add_drawdown_recovery.json  tushare_incremental_add_excess_hit_rate.json  tushare_portfolio12.json  (+7 more)
configs/candidates/: tushare_scoring_v5_candidate.json  tushare_scoring_v5_quarterly_candidate.json
docs/: architecture.md  backtest_conventions.md  baseline_upgrade_checklist.md  candidate_validation_spec.md  changes.md  config_governance.md  data_contracts.md  data_dictionary.md  error_log.md  experiment_guide.md  factor_catalog.md  factor_iteration_framework.md  factor_research_framework.md  roadmap.md  robustness_analysis.md  strategy_spec_v1.md  time_boundary_audit.md  v2_baseline_review_2026-03-24.md  v2_baseline_review_2026-03-25.md  v2_lite_baseline_review_2026-03-26.md  v2_lite_baseline_review_2026-03-27.md  v2_lite_execution_risk_note_2026-03-27.md  v2_validation_spec.md
src/fund_research_v2/: __main__.py  cli.py
tests/: __init__.py  pipeline_base.py  pipeline_integration.py  pipeline_legacy.py  pipeline_regression.py  pipeline_unit.py  test_pipeline.py  test_trade_calendar_and_nav_selection.py  test_web_viewer.py
(+35 files in other folders)
