[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "fund-research-v2"
version = "0.1.0"
description = "Monthly research platform for China OTC active mutual funds."
requires-python = ">=3.10"
dependencies = [
    "tushare>=1.4"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

